--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ li a:hover{
     width: 100%;
 }
 #produtos{
+    margin-top: -7px;
     text-align: center;
     background-color: var(--cor-fundo);
     color: var(--font-color);
