--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,69 @@ li a:hover{
     text-transform: uppercase;
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.547);
 }
+#title-contato{
+    margin-left: 13%;
+}
+.caixa{
+    margin-top: 5%;
+    margin-left: 38%;
+    border: 2px solid black;
+    width: 400px;
+    height: 300px;
+    border-radius: 15%;
+    gap: 15px;
+    padding: 0%;
+}
+#contato-container{
+    gap: 15px;
+    margin-top: 10%;
+    margin-left: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 250%;
+}
+input {
+    display: flex;
+    color: var(--branco);
+    width: 33%;
+    background-color: var(--azul-150);
+    border: solid 3px var(--branco);
+    border-radius: 10px;
+    padding: 5px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+input::placeholder{
+    font-weight: 300;
+    color: var(--branco);
+}
+
+#btn-enviar {
+    
+    padding: 15px;
+    border: none;
+    background-color: var(--azul-100);
+    color: var(--branco);
+    text-transform: uppercase;
+    border-radius: 10px;
+    font-weight: 700;
+    width: 31.5%;
+    cursor: pointer;
+    margin-top: 20px;
+    transition: ease 0.5s;
+    margin-left: 5px;
+    background-color: #465059;
+}
+
+#btn-enviar:hover {
+    transform: scale(1.06);
+    transition: ease 0.5s;
+    background-color: #151E26;
+    color: white;
+}
+
 footer{
     text-align: center;
     background-color: var(--font-color);
