--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 :root{
-    --cor-fundo: #C5D1D9;
+    --cor-header: #C5D1D9;
     --font-color: #151E26;
+    --cor-background: #E9EFF2;
 }
 *{
     margin: 0;
@@ -40,8 +41,8 @@ li a:hover{
     justify-content: space-around;
     align-items: center;
     height: 8vh;
-    background-color: var(--cor-fundo);
-    width: 100vw;
+    background-color: var(--cor-header);
+    width: 100%;
 }
 #menu  img{
     height: 75px;
@@ -59,7 +60,7 @@ li a:hover{
 #produtos{
     margin-top: -7px;
     text-align: center;
-    background-color: var(--cor-fundo);
+    background-color: var(--cor-header);
     color: var(--font-color);
     text-transform: uppercase;
 }
@@ -77,7 +78,7 @@ li a:hover{
     align-items: center;
     margin: 20px;
     padding: 20px;
-    background-color: var(--cor-fundo);
+    background-color: var(--cor-header);
     border-radius: 14px;
     font-size: 20px;
     font-weight: 600;
@@ -113,7 +114,7 @@ li a:hover{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: white;
+    background-color: var(--cor-background);
 }
 #contato-container{
     padding: 20px;
@@ -128,10 +129,10 @@ li a:hover{
 }
 input {
     display: flex;
-    color: var(--branco);
+    color: var(--font-color);
     width: 100%;
-    background-color: var(--azul-150);
-    border: solid 3px var(--branco);
+    background-color: white;
+    border: solid 3px white;
     border-radius: 10px;
     padding: 5px;
     padding-top: 10px;
@@ -141,14 +142,14 @@ input {
 
 input::placeholder{
     font-weight: 300;
-    color: var(--branco);
+    color: var(--font-color);
 }
 
 #btn-enviar {
     padding: 15px;
     border: none;
-    background-color: var(--azul-100);
-    color: var(--branco);
+    background-color: var(--cor-header);
+    color: var(--font-color);
     text-transform: uppercase;
     border-radius: 10px;
     font-weight: 700;
@@ -156,7 +157,6 @@ input::placeholder{
     cursor: pointer;
     margin-top: 20px;
     transition: ease 0.5s;
-    background-color: #ccc;
 }
 .botao{
     display: flex;
