--- a/css/style.css
+++ b/css/style.css
@@ -283,15 +283,18 @@ footer{
     align-items: center;
 }
 #quiz-Form{
-    width: 40%;
-    padding: 50px;
+    width: 50%;
+    padding: 30px;
     border: solid #151E26;
-    border-radius: 14px;
+    border-radius: 16px;
     background-color: var(--cor-background);
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    margin-top: 5vh;
+    margin-bottom: auto;
+    gap: 20px;
 }
 .perguntas{
     max-width: 80%;   
@@ -300,13 +303,13 @@ footer{
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    gap: 10px;
+    gap: 15px;
 }
 .alternativa{
     width: 100%;
     display: flex;
     align-items: baseline;
     justify-content: flex-start;
-    gap: 10px;
+    gap: 15px;
 }   
 
