--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ li a:hover{
 }
 #pag-contatos{
     width: 100vw;
-    height: 90vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -127,6 +127,7 @@ li a:hover{
     border: 1px solid black;
     border-radius: 10px;
     background-color: white;
+    margin-bottom: 14%;
 }
 #email,#telefone,#interesse, #nome-completo,#usuario,#senha{
     display: flex;
@@ -181,6 +182,7 @@ footer{
     color: white;
     font-size: 18px;
     padding: 20px;
+    width: 100%;
 }
 
 
@@ -188,6 +190,7 @@ footer{
 /*LOGIN*/
 #pag-login {
     width: 100vw;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -200,7 +203,8 @@ footer{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 80vh;   
+    height: 80vh;  
+    margin: 20px 0; 
 }
 
 #card-login{
@@ -279,13 +283,15 @@ footer{
 #quiz-pag{
     display: flex;
     flex-direction: column;
+    width: 100%;
 }
 #quiz{
     width: 100%;
-    height: 80vh;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 30px;
 }
 #quiz-Form{
     width: 50%;
@@ -321,12 +327,20 @@ footer{
 /*Aperfeiçoar o card!*/
 /*Colocar o card na esquerda e a imagem na direita!*/
 #sobre-pag{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+#sobre-section{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin-top: 5%;
+
     width: 100%;
     height: 70vh;
+
 }
 .card_sobre{
     width: 50%;
