--- a/css/style.css
+++ b/css/style.css
@@ -337,10 +337,8 @@ footer{
     display: flex;
     justify-content: space-around;
     align-items: center;
-
     width: 100%;
     height: 70vh;
-
 }
 .card_sobre{
     width: 50%;
@@ -353,6 +351,11 @@ footer{
     align-items: flex-start;
     justify-content: space-evenly;
     flex-direction: column;
+    transition: 1s ease;
+}
+.card_sobre:hover{
+    transform: scale(1.1);
+    transition: 1s ease;
 }
 #sobre_titulo{
     font-size:50px;
@@ -362,5 +365,16 @@ footer{
     text-align: justify;
     margin: 40px;
 }
-
-
+#sobre_imagem{
+    width: 24%;
+}
+#sobre_imagem img{
+    width: 100%;
+    border-radius: 14px;
+    box-shadow: 10px 10px 25px #00000029,-10px -10px 25px #0f0f0f79;
+    transition: 1s ease;
+}
+#sobre_imagem img:hover{
+    transform: scale(1.1);
+    transition: 1s ease;
+}
